kustomize/app-books/overlays/stage/deployment-path.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  template:
    spec:
      containers:
        - name: book-service
          image: localhost:5000/book-service:stage
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
