kustomize/app-books/overlays/stage/destination-rule-path.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-books-destination-rule
spec:
  host: books-service.stage.svc.cluster.local
